图片，文档 浏览和播放

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,15 @@ logging:
 jaign:
   config:
     free-space-root: C:/Users/jaign/test/
+    document-type:
+      pdf:
+        - pdf
+      word:
+        - doc
+        - docx
+      ppt:
+        - ppt
+        - pptx
+      excel:
+        - xls
+        - xlsx
