--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
         <dependency>
             <groupId>ws.schild</groupId>
             <artifactId>jave-core</artifactId>
