JS分离，优化前端权限控制逻辑

--- a/src/main/resources/static/cfg/view-config.json
+++ b/src/main/resources/static/cfg/view-config.json
@@ -17,5 +17,10 @@
     "JPG",
     "PNG",
     "JPEG"
-  ]
+  ],
+  "office": {
+    "word": ["DOC","DOCX"],
+    "ppt": ["PPT","PPTX"],
+    "excel": ["XLS","XLSX"]
+  }
 }
