--- a/src/main/resources/static/cfg/view-config.json
+++ b/src/main/resources/static/cfg/view-config.json
@@ -11,12 +11,15 @@
     "HTML",
     "XML",
     "PROPERTIES",
-    "SQL"
+    "SQL",
+    "TXT"
   ],
   "img": [
     "JPG",
     "PNG",
-    "JPEG"
+    "JPEG",
+    "GIF",
+    "ICO"
   ],
   "office": {
     "word": ["DOC","DOCX"],
